--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,14 @@ config/InvTweaks.cfg
 config/buildcraft/detailed.properties
 config/AppliedEnergistics2/aerecipes/items.csv
 config/AppliedEnergistics2/Facades.cfg
+config/AppliedEnergistics2/aerecipes/items.csv
+config/AppliedEnergistics2/aerecipes/items.csv
+config/AppliedEnergistics2/CustomRecipes.cfg
+config/AppliedEnergistics2/Facades.cfg
+config/buildcraft/detailed.properties
+config/ChickenChunks.cfg
+config/chiselsandbits.cfg
+config/ichunutil.cfg
+config/InvTweaks.cfg
+config/jei/worldSettings.cfg
+config/randomtweaks/data.json
