--- a/config/charset/modules.cfg
+++ b/config/charset/modules.cfg
@@ -21,6 +21,7 @@ compat {
     B:"jei:crafting.pocket"=true
     B:"jei:simplelogic.gates"=true
     B:"jei:storage.barrels"=true
+    B:"jei:tablet"=true
     B:"mcjtylib:tablet"=true
     B:"mcmultipart:simplelogic.gates"=true
     B:"opencomputers:audio.storage"=true
@@ -45,8 +46,14 @@ overrides {
 
     # Audio cables [Profile: FORCED]
     S:audio.transport=DEFAULT
+
+    # Improved Cauldron! [Profile: FORCED]
     S:crafting.cauldron=DEFAULT
+
+    # Compression Crafter, for all your large-scale auto-crafting needs. [Profile: FORCED]
     S:crafting.compression=DEFAULT
+
+    # Adds a Pocket Crafting Table [Profile: FORCED]
     S:crafting.pocket=DEFAULT
 
     # Place things! In the world! And they stack! [Profile: FORCED]
