--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -18,10 +18,42 @@ world-1195922161 {
 }
 
 
+world-1256614609 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=grap
+    B:overlayEnabled=true
+}
+
+
+world-1374113675 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-1375323923 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@ways
+    B:overlayEnabled=true
+}
+
+
 world-1381165263 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=@gad
+    B:overlayEnabled=true
+}
+
+
+world-1445915731 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@ways
     B:overlayEnabled=true
 }
 
@@ -82,10 +114,26 @@ world-1793304504 {
 }
 
 
+world-1812204326 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@mekanism & 
+    B:overlayEnabled=true
+}
+
+
 world-1881665232 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=cloud
+    B:overlayEnabled=true
+}
+
+
+world-18984236 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@ways
     B:overlayEnabled=true
 }
 
@@ -110,6 +158,14 @@ world-2005756463 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=hammer
+    B:overlayEnabled=true
+}
+
+
+world-2007006252 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@ways
     B:overlayEnabled=true
 }
 
@@ -146,10 +202,34 @@ world-2117386381 {
 }
 
 
+world-21811201 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=rope
+    B:overlayEnabled=true
+}
+
+
+world-311855470 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world-390047308 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=bone
+    B:overlayEnabled=true
+}
+
+
+world-45927067 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -186,6 +266,30 @@ world-610714742 {
 }
 
 
+world-612854268 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-641070940 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=enginee
+    B:overlayEnabled=true
+}
+
+
+world-641070941 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world-641070945 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -194,10 +298,34 @@ world-641070945 {
 }
 
 
+world-68556220 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=ways
+    B:overlayEnabled=true
+}
+
+
+world-727142576 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=ender
+    B:overlayEnabled=true
+}
+
+
 world-739313603 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=portal
+    B:overlayEnabled=true
+}
+
+
+world-741520463 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -211,9 +339,9 @@ world-751429545 {
 
 
 world-78688046 {
-    B:cheatItemsEnabled=false
+    B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=
+    S:filterText=ways
     B:overlayEnabled=true
 }
 
@@ -250,10 +378,66 @@ world112479472 {
 }
 
 
+world113318802 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=gold ore
+    B:overlayEnabled=true
+}
+
+
+world1146070194 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world1199835611 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=salt
+    B:overlayEnabled=true
+}
+
+
+world1220344452 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=hopperh
+    B:overlayEnabled=true
+}
+
+
 world1337475327 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world1341499755 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=ways
+    B:overlayEnabled=true
+}
+
+
+world1372685886 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@myst
+    B:overlayEnabled=true
+}
+
+
+world1397932926 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=end
     B:overlayEnabled=true
 }
 
@@ -287,10 +471,50 @@ world1544803905 {
 }
 
 
+world1582297286 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world167414058 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world1696542066 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@ways
+    B:overlayEnabled=true
+}
+
+
+world1733133011 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@sim
+    B:overlayEnabled=true
+}
+
+
+world1806575624 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=slimesl
+    B:overlayEnabled=true
+}
+
+
+world1806575655 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@solar
     B:overlayEnabled=true
 }
 
@@ -304,12 +528,20 @@ world1812659617 {
 
 
 world1821167760 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@d
+    B:overlayEnabled=true
+}
+
+
+world1855637915 {
     # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
 
-    # Hide and unhide items by clicking them in the ingredient list.
+    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=press
+    S:filterText=quic
 
     # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
@@ -356,6 +588,30 @@ world242135120 {
 }
 
 
+world280086710 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=crag
+    B:overlayEnabled=true
+}
+
+
+world314533133 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=lv wire
+    B:overlayEnabled=true
+}
+
+
+world327509142 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=ways
+    B:overlayEnabled=true
+}
+
+
 world388728918 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
@@ -364,10 +620,26 @@ world388728918 {
 }
 
 
+world552728672 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=ocel
+    B:overlayEnabled=true
+}
+
+
 world569701859 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=@potion
+    B:overlayEnabled=true
+}
+
+
+world576289796 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -384,6 +656,30 @@ world607583638 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=modular
+    B:overlayEnabled=true
+}
+
+
+world609009140 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world712473666 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world774401751 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -420,10 +716,34 @@ world912486375 {
 }
 
 
+world914398856 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=link
+    B:overlayEnabled=true
+}
+
+
 world925886391 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=hop
+    B:overlayEnabled=true
+}
+
+
+world933792750 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=enderm
+    B:overlayEnabled=true
+}
+
+
+world961587952 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=floral
     B:overlayEnabled=true
 }
 
