--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,7 +1,7 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Wed Jun 27 14:54:01 CDT 2018
-enableMiddleClick=true
+#Sat Sep 08 16:20:27 CDT 2018
+enableMiddleClick=false
 showChestButtons=true
 enableSortingOnPickup=false
 enableAutoRefill=false
