--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -547,6 +547,7 @@ crafting {
     B:vazkii.quark.world.block.BlockBiomeCobblestone=true
     B:vazkii.quark.world.block.BlockBiotite=true
     B:vazkii.quark.world.block.BlockBiotiteOre=true
+    B:vazkii.quark.world.block.BlockCrystal=true
     B:vazkii.quark.world.block.BlockLimestone=true
     B:vazkii.quark.world.block.BlockMarble=true
     B:vswe.stevescarts.blocks.BlockMetalStorage=true
