--- a/config/DankNull.cfg
+++ b/config/DankNull.cfg
@@ -26,6 +26,114 @@ general {
     # If whitelist is non-empty, then ONLY Ore Dictionary items matching the entries will
     # be able to take advantage of /dank/null's Ore Dictionary functionality. [default: ]
     S:OreDictWhitelist=
+	ingotCobalt
+	ingotIron
+	ingotGold
+	ingotCopper
+	ingotTin
+	ingotSilver
+	ingotLead
+	ingotAluminum
+	ingotNickel
+	ingotBronze
+	ingotConstantan
+	ingotEnderium
+	ingotLumium
+	ingotInvar
+	ingotSignalum
+	ingotManasteel
+	ingotTerrasteel
+
+	blockCobalt
+	blockIron
+	blockGold
+	blockCopper
+	blockTin
+	blockSilver
+	blockLead
+	blockAluminum
+	blockNickel
+	blockBronze
+	blockConstantan
+	blockEnderium
+	blockLumium
+	blockInvar
+	blockSignalum
+	blockManasteel
+	blockTerrasteel
+
+	nuggetCobalt
+	nuggetIron
+	nuggetGold
+	nuggetCopper
+	nuggetTin
+	nuggetSilver
+	nuggetLead
+	nuggetAluminum
+	nuggetNickel
+	nuggetBronze
+	nuggetConstantan
+	nuggetEnderium
+	nuggetLumium
+	nuggetInvar
+	nuggetSignalum
+	nuggetManasteel
+	nuggetTerrasteel
+
+	dustCobalt
+	dustIron
+	dustGold
+	dustCopper
+	dustTin
+	dustSilver
+	dustLead
+	dustAluminum
+	dustNickel
+	dustBronze
+	dustConstantan
+	dustEnderium
+	dustLumium
+	dustInvar
+	dustSignalum
+	dustManasteel
+	dustTerrasteel
+	
+	dyeWhite
+	dyeOrange
+	dyeMagenta
+	dyeLightBlue
+	dyeYellow
+	dyeLime
+	dyePink
+	dyeGray
+	dyeLightGray
+	dyeCyan
+	dyePurple
+	dyeBlue
+	dyeBrown
+	dyeGreen
+	dyeRed
+	dyeBlack
+
+	cobblestone
+	stone
+	stoneGranite
+	stoneDiorite
+	stoneAndesite
+	stoneLimestone
+	stoneMarble
+	stoneBasalt
+		
+	dustRedstone
+	dustGlowstone
+	dustSulfur
+	dustWood
+	dustSaltpeter
+	dustObsidian
+	dustCoal
+	dustCharcoal
+	dustAsh
+	dustEnder
 }
 
 
