Increased C&B bit bag storage size to 65,536

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -1,7 +1,7 @@
 # Configuration file
 
 "balance settings" {
-    I:bagStackSize=512
+    I:bagStackSize=65536
     D:bitLightPercentage=6.25
     B:blacklistTickingBlocks=true
     B:compatabilityMode=true
@@ -378,6 +378,7 @@ crafting {
     B:net.minecraft.block.BlockCompressedPowered=true
     B:net.minecraft.block.BlockConcretePowder=true
     B:net.minecraft.block.BlockDirt=true
+    B:net.minecraft.block.BlockDoubleStoneSlab=true
     B:net.minecraft.block.BlockGlass=true
     B:net.minecraft.block.BlockGlazedTerracotta=true
     B:net.minecraft.block.BlockGlowstone=true
