--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -417,6 +417,15 @@ client {
     }
 
     "better vanilla textures" {
+        B:"Enable Andesite"=true
+        B:"Enable Bow Animation"=true
+        B:"Enable Bricks"=true
+        B:"Enable Diorite"=true
+        B:"Enable Glass"=true
+        B:"Enable Granite"=true
+        B:"Enable Observer"=true
+        B:"Enable Piston Models"=true
+        B:"Enable Pumpkin Front Face"=false
         B:"Override Andesite"=true
         B:"Override Beetroot Seeds"=true
         B:"Override Bow Animation"=true
@@ -2430,6 +2439,7 @@ world {
     speleothems {
         I:"Cluster Attempts Per Chunk"=60
         I:"Cluster Attempts Per Chunk (Nether)"=4
+        I:"Highest Y Level"=55
         I:"Speleothems Per Cluster"=12
         I:"Speleothems Per Cluster (Nether)"=12
 
