[Temp] Removed cheap steel smeltery recipe

--- a/config/copypaste.cfg
+++ b/config/copypaste.cfg
@@ -2,7 +2,7 @@
 
 general {
     # Keep world data updated with the contents of the copy folder
-    B:copyExisting=true
+    B:copyExisting=false
 }
 
 
