Buffed ImE charger transfer speed

--- a/config/immersiveengineering.cfg
+++ b/config/immersiveengineering.cfg
@@ -233,7 +233,7 @@ general {
         I:capacitorMV_storage=1000000
 
         # The Flux per tick the Charging Station can insert into an item
-        I:charger_consumption=256
+        I:charger_consumption=5120
 
         # The Flux per tick consumed by the Core Sample Drill
         I:coredrill_consumption=40
